syntax = "proto3";
package api;

import "empty.proto";

option go_package = "api/protobuf";

message User {
  string id = 1;
  string email = 2;
}

message NewUser {
  string email = 1;
}

message UpdateUserEmailRequest {
  string userId = 1;
  string email = 2;
}

message RemoveUserRequest {
  string userId = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

service UserService {
  rpc GetUserByEmail(GetUserByEmailRequest) returns (User);
  rpc CreateUser(NewUser) returns (User);
  rpc UpdateUserEmail(UpdateUserEmailRequest) returns (User);
  rpc RemoveUser(RemoveUserRequest) returns (Empty); // TODO i think there is a packaged golang empty data type
}
